=== (unreleased)

* Numeric host names in .ssh/config are now parsed correct [Yanko Ivanov]

* Make sure the error raised when a public key file is malformed is more informative than a MethodMissing error [Jamis Buck]

* Cipher#reset is now called after Cipher#final, with the last n bytes used as the next initialization vector [Jamis Buck]


=== 2.0.3 / 27 Jun 2008

* Make Net::SSH::Version comparable [Brian Candler]

* Fix errors in port forwarding when a channel could not be opened due to a typo in the exception name [Matthew Todd]

* Use #chomp instead of #strip when cleaning the version string reported by the remote host, so that trailing whitespace is preserved (this is to play nice with servers like Mocana SSH) [Timo Gatsonides]

* Correctly parse ssh_config entries with eq-sign delimiters [Jamis Buck]

* Ignore malformed ssh_config entries [Jamis Buck]

=== 2.0.2 / 29 May 2008

* Make sure the agent client understands both RSA "identities answers" [Jamis Buck]

* Fixed key truncation bug that caused hmacs other than SHA1 to fail with "corrupt hmac" errors [Jamis Buck]

* Fix detection and loading of public keys when the keys don't actually exist [David Dollar]


=== 2.0.1 / 5 May 2008

* Teach Net::SSH about a handful of default key names [Jamis Buck]


=== 2.0.0 / 1 May 2008

* Allow the :verbose argument to accept symbols (:debug, etc.) as well as Logger level constants (Logger::DEBUG, etc.) [Jamis Buck]


=== 2.0 Preview Release 4 (1.99.3) / 19 Apr 2008

* Make sure HOME is set to something sane, even on OS's that don't set it by default [Jamis Buck]

* Add a :passphrase option to specify the passphrase to use with private keys [Francis Sullivan]

* Open a new auth agent connection for every auth-agent channel request [Jamis Buck]


=== 2.0 Preview Release 3 (1.99.2) / 10 Apr 2008

* Session properties [Jamis Buck]

* Make channel open failure work with a callback so that failures can be handled similarly to successes [Jamis Buck]

